code refactoring for internationalization

--- a/scripts/alteracoes/views/factorOption.vm
+++ b/scripts/alteracoes/views/factorOption.vm
@@ -60,11 +60,11 @@
                                     <div class="list-group">
                                         #foreach( $tipoFator in $fator.getFaPriority() )
                                             #if ($tipoFator.toValue() == $fator.getFatorPreferencial())
-                                                <button type="submit" name="tipoAutenticacao" class="list-group-item list-group-item-action active" value = "$tipoFator">
+                                                <button type="submit" name="authenticationType" class="list-group-item list-group-item-action active" value = "$tipoFator">
                                                     $tipoFator.getAfName()
                                                 </button>
                                             #else    
-                                                <button type="submit" name="tipoAutenticacao" class="list-group-item list-group-item-action" value = "$tipoFator">
+                                                <button type="submit" name="authenticationType" class="list-group-item list-group-item-action" value = "$tipoFator">
                                                     $tipoFator.getAfName()
                                                 </button>
                                             #end
